replace DescriptiveStastics table

--- a/basic/DescriptiveStatistics.html
+++ b/basic/DescriptiveStatistics.html
@@ -20,6 +20,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <main>
     <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
     Except where noted, the statistics are generated using the R scripts included below.</p>
+
     <table class="table" style="margin-left: auto; margin-right: auto;">
         <thead>
          <tr>
@@ -34,11 +35,11 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
        <tbody>
          <tr>
           <td style="text-align:left;"> Sample size (in 1000) </td>
-          <td style="text-align:right;"> 60193 </td>
-          <td style="text-align:right;"> 67032 </td>
-          <td style="text-align:right;"> 70265 </td>
-          <td style="text-align:right;"> 70352 </td>
-          <td style="text-align:right;"> 65713 </td>
+          <td style="text-align:right;"> 58202 </td>
+          <td style="text-align:right;"> 61241 </td>
+          <td style="text-align:right;"> 63777 </td>
+          <td style="text-align:right;"> 62275 </td>
+          <td style="text-align:right;"> 60397 </td>
          </tr>
          <tr grouplength="3"><td colspan="6" style="border-bottom: 1px solid;"><strong>A. Number of occupations</strong></td></tr>
        <tr>
@@ -68,23 +69,23 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
          <tr grouplength="1"><td colspan="6" style="border-bottom: 1px solid;"><strong>B. Labor force participation (%)</strong></td></tr>
        <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> Female </td>
-          <td style="text-align:right;"> 37 </td>
           <td style="text-align:right;"> 39 </td>
           <td style="text-align:right;"> 40 </td>
+          <td style="text-align:right;"> 40 </td>
           <td style="text-align:right;"> 41 </td>
-          <td style="text-align:right;"> 43 </td>
+          <td style="text-align:right;"> 42 </td>
          </tr>
-         <tr grouplength="9"><td colspan="6" style="border-bottom: 1px solid;"><strong>C. Distribution of occupational major groups (%)</strong></td></tr>
+         <tr grouplength="11"><td colspan="6" style="border-bottom: 1px solid;"><strong>C. Distribution of occupational major groups (%)</strong></td></tr>
        <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST / TECHNICAL </td>
-          <td style="text-align:right;"> 11 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST AND TECHNICAL WORKERS </td>
           <td style="text-align:right;"> 11 </td>
           <td style="text-align:right;"> 12 </td>
-          <td style="text-align:right;"> 12 </td>
+          <td style="text-align:right;"> 13 </td>
+          <td style="text-align:right;"> 14 </td>
           <td style="text-align:right;"> 14 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> B MANAGERIAL </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> B ADMINISTRATIVE AND MANAGERIAL WORKERS </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
@@ -92,88 +93,88 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 2 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> C CLERICAL </td>
-          <td style="text-align:right;"> 13 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> C CLERICAL WORKERS </td>
           <td style="text-align:right;"> 18 </td>
-          <td style="text-align:right;"> 18 </td>
-          <td style="text-align:right;"> 17 </td>
           <td style="text-align:right;"> 19 </td>
+          <td style="text-align:right;"> 19 </td>
+          <td style="text-align:right;"> 20 </td>
+          <td style="text-align:right;"> 20 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES </td>
-          <td style="text-align:right;"> 15 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES WORKERS </td>
+          <td style="text-align:right;"> 14 </td>
           <td style="text-align:right;"> 14 </td>
           <td style="text-align:right;"> 15 </td>
           <td style="text-align:right;"> 15 </td>
-          <td style="text-align:right;"> 13 </td>
+          <td style="text-align:right;"> 15 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICES </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICE WORKERS </td>
           <td style="text-align:right;"> 7 </td>
           <td style="text-align:right;"> 7 </td>
           <td style="text-align:right;"> 8 </td>
+          <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 10 </td>
-          <td style="text-align:right;"> 13 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY WORKERS </td>
+          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 1 </td>
           <td style="text-align:right;"> 1 </td>
           <td style="text-align:right;"> 2 </td>
           <td style="text-align:right;"> 2 </td>
-          <td style="text-align:right;"> 2 </td>
-          <td style="text-align:right;"> 2 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AG, F &amp; F </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AGRICULTURE, FORESTRY AND FISHERY WORKERS </td>
           <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 7 </td>
+          <td style="text-align:right;"> 6 </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
-          <td style="text-align:right;"> 4 </td
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> H TRANSPORT &amp; COMM </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> H TRANSPORT AND COMMUNICATION WORKERS </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
-          <td style="text-align:right;"> 3 </td>
-          <td style="text-align:right;"> 3 </td>
+          <td style="text-align:right;"> 4 </td>
+          <td style="text-align:right;"> 4 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUF., PRODUCTION </td>
-          <td style="text-align:right;"> 32 </td>
-          <td style="text-align:right;"> 31 </td>
-          <td style="text-align:right;"> 30 </td>
-          <td style="text-align:right;"> 29 </td>
-          <td style="text-align:right;"> 28 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUFACTURING AND PRODUCTION WORKERS </td>
+          <td style="text-align:right;"> 20 </td>
+          <td style="text-align:right;"> 20 </td>
+          <td style="text-align:right;"> 18 </td>
+          <td style="text-align:right;"> 17 </td>
+          <td style="text-align:right;"> 17 </td>
          </tr>
          <tr>
-            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MACHINERY OPERATORS </td>
-            <td style="text-align:right;"> 2 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-           </tr>
-           <tr>
-            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE, CONSTRUCTION WORKERS </td>
-            <td style="text-align:right;"> 9 </td>
-            <td style="text-align:right;"> 9 </td>
-            <td style="text-align:right;"> 9 </td>
-            <td style="text-align:right;"> 9 </td>
-            <td style="text-align:right;"> 9 </td>
-           </tr>
-             <tr grouplength="9"><td colspan="6" style="border-bottom: 1px solid;"><strong>D. Female labor force by major groups (%)</strong></td></tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I STATIONARY ENGINE AND CONSTRUCTION MACHINERY OPERATORS AND ELECTRICITY WORKERS </td>
+          <td style="text-align:right;"> 2 </td>
+          <td style="text-align:right;"> 2 </td>
+          <td style="text-align:right;"> 2 </td>
+          <td style="text-align:right;"> 2 </td>
+          <td style="text-align:right;"> 2 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE WORKERS, CONSTRUCTION WORKERS AND LABOURERS </td>
+          <td style="text-align:right;"> 9 </td>
+          <td style="text-align:right;"> 9 </td>
+          <td style="text-align:right;"> 10 </td>
+          <td style="text-align:right;"> 10 </td>
+          <td style="text-align:right;"> 10 </td>
+         </tr>
+         <tr grouplength="11"><td colspan="6" style="border-bottom: 1px solid;"><strong>D. Female labor force by major groups (%)</strong></td></tr>
        <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST / TECHNICAL </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST AND TECHNICAL WORKERS </td>
           <td style="text-align:right;"> 40 </td>
           <td style="text-align:right;"> 41 </td>
           <td style="text-align:right;"> 42 </td>
           <td style="text-align:right;"> 43 </td>
-          <td style="text-align:right;"> 44 </td>
+          <td style="text-align:right;"> 47 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> B MANAGERIAL </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> B ADMINISTRATIVE AND MANAGERIAL WORKERS </td>
           <td style="text-align:right;"> 8 </td>
           <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 10 </td>
@@ -181,47 +182,47 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 12 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> C CLERICAL </td>
-          <td style="text-align:right;"> 52 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> C CLERICAL WORKERS </td>
+          <td style="text-align:right;"> 57 </td>
           <td style="text-align:right;"> 61 </td>
           <td style="text-align:right;"> 62 </td>
           <td style="text-align:right;"> 62 </td>
           <td style="text-align:right;"> 61 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES </td>
-          <td style="text-align:right;"> 35 </td>
-          <td style="text-align:right;"> 34 </td>
-          <td style="text-align:right;"> 35 </td>
-          <td style="text-align:right;"> 33 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES WORKERS </td>
+          <td style="text-align:right;"> 37 </td>
+          <td style="text-align:right;"> 37 </td>
+          <td style="text-align:right;"> 37 </td>
+          <td style="text-align:right;"> 36 </td>
           <td style="text-align:right;"> 38 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICES </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICE WORKERS </td>
           <td style="text-align:right;"> 63 </td>
-          <td style="text-align:right;"> 61 </td>
-          <td style="text-align:right;"> 62 </td>
+          <td style="text-align:right;"> 63 </td>
+          <td style="text-align:right;"> 64 </td>
           <td style="text-align:right;"> 65 </td>
-          <td style="text-align:right;"> 67 </td>
+          <td style="text-align:right;"> 66 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY WORKERS </td>
           <td style="text-align:right;"> 3 </td>
           <td style="text-align:right;"> 3 </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
-          <td style="text-align:right;"> 6 </td>
+          <td style="text-align:right;"> 5 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AG, F &amp; F </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AGRICULTURE, FORESTRY AND FISHERY WORKERS </td>
+          <td style="text-align:right;"> 46 </td>
           <td style="text-align:right;"> 45 </td>
-          <td style="text-align:right;"> 44 </td>
           <td style="text-align:right;"> 43 </td>
           <td style="text-align:right;"> 43 </td>
           <td style="text-align:right;"> 41 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> H TRANSPORT &amp; COMM </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> H TRANSPORT AND COMMUNICATION WORKERS </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
@@ -229,31 +230,32 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 4 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUF., PRODUCTION </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUFACTURING AND PRODUCTION WORKERS </td>
           <td style="text-align:right;"> 38 </td>
-          <td style="text-align:right;"> 39 </td>
-          <td style="text-align:right;"> 38 </td>
-          <td style="text-align:right;"> 39 </td>
           <td style="text-align:right;"> 37 </td>
+          <td style="text-align:right;"> 35 </td>
+          <td style="text-align:right;"> 34 </td>
+          <td style="text-align:right;"> 32 </td>
          </tr>
          <tr>
-            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MACHINERY OPERATORS</td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-            <td style="text-align:right;"> 1 </td>
-           </tr>
-           <tr>
-            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE, CONSTRUCTION WORKERS </td>
-            <td style="text-align:right;"> 20 </td>
-            <td style="text-align:right;"> 22 </td>
-            <td style="text-align:right;"> 24 </td>
-            <td style="text-align:right;"> 26 </td>
-            <td style="text-align:right;"> 27 </td>
-           </tr>
-           </tbody>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I STATIONARY ENGINE AND CONSTRUCTION MACHINERY OPERATORS AND ELECTRICITY WORKERS </td>
+          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 1 </td>
+         </tr>
+         <tr>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE WORKERS, CONSTRUCTION WORKERS AND LABOURERS </td>
+          <td style="text-align:right;"> 21 </td>
+          <td style="text-align:right;"> 23 </td>
+          <td style="text-align:right;"> 24 </td>
+          <td style="text-align:right;"> 26 </td>
+          <td style="text-align:right;"> 27 </td>
+         </tr>
+       </tbody>
        </table>
+       
 <pre><code class="language-html">#' DescriptiveStatistics.R
 #' 2021-12-15
 #' Revised 2022-5-2
