add Blau reference

--- a/basic/UchikoshiMugiyamaDecompositionRFunction.html
+++ b/basic/UchikoshiMugiyamaDecompositionRFunction.html
@@ -21,7 +21,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
   <article>
   <p>Uchikoshi and Mugiyama (2020) decompose changes in occupational gender segregation into 
     within occupation and between occupation contributions using Duncan and Duncan's dissimilarity 
-    index as extended by Fuchs (1975).
+    index as extended by Fuchs (1975) and using a representation equivalent to that used by Blau et al (2013).
   </p>
   <p>Taking \(F_{jt}\) (\(M_{jt}\)) to be the number of women (men) employed in occupation \(j\) at 
     time \(t\) and \(T_{jt}=F_{jt}+M_{jt}\) to be the total number of women and men, 
@@ -272,8 +272,12 @@ dissimilarity_all <- function(data, group, unit) {
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
+    <p>Blau, Francine D., Brummund, Peter, and Liu, Albert Yung-Hsu (2013) Trends in Occupational Segregation by Gender
+      1970–2009: Adjusting for the Impact of Changes in the Occupational Coding System.
+      Demography, 50(2), pp.471-492. 
+      <a href="https://doi.org/10.1007/s13524-012-0151-7" class="uri">https://doi.org/10.1007/s13524-012-0151-7</a></p>
     <p>Duncan, Otis Dudley and Duncan, Beverly (1955) A Methodological Analysis of Segregation Indexes.
-      American Sociological Review, 20（2）, pp.210–217. 
+      American Sociological Review, 20(2), pp.210–217. 
       <a href="https://www.jstor.org/stable/2088328" class="uri">https://www.jstor.org/stable/2088328</a></p>
     <p><a id="Elbers2021">Elbers, Benjamin (2021)</a>. A Method for Studying Differences in Segregation Across Time and Space. 
       Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
