update ReproduceUMResults.html and related

--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -2,7 +2,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="13 December 2021" />
+      <meta name="revised" content="9 May 2022" />
         <title>Reproduce results from Uchikoshi and Mugiyama (2020)</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -16,7 +16,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Reproduce results from Uchikoshi and Mugiyama (2020)</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-13 December 2021</p>
+  9 May 2022</p>
 <main>
   <article>
     <h4>Reproduce dissimilarity computations</h4>
@@ -33,9 +33,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         <figcaption>Dissimilarity Index 1985-2005</figcaption>
 </figure>
 <p>The R code for the above figure is below.</p>
-<pre><code class="language-html">#' ReproduceUMResults.R
-#' Use data from UchikoshiMugiyamaRepro01.R in decomposition
-#' following script in UMDissimilarity.R and functions in 
+<pre><code class="language-html">#' ReproduceUMResultsV02.R
+#' Use script in UMDissimilarity.R and functions in 
 #' dissimilarity_um.R
 #' @references
 #' [UM2020] Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
@@ -45,51 +44,53 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 #'   Segregation Across Time and Space Sociological Methods & Research.
 #'   doi: 10.1177/0049124121986204
 
-library(segregation)
-library(data.table)
-source("Scripts/dissimilarity_um.R")
+require(segregation)
+require(data.table)
+source("ScriptsV02/dissimilarity_um.R")
 
 # use 1985 occupation statistics with occupational crosswalk
 # make data.table copy
-d85 <- as.data.table(occgenall[occgenall$CensusYear == "1985",c("OccMinor","Gender","value")])
+d85 <- as.data.table(occgenall[occgenall$year == "1985",c("OccMinor","Gender","n")])
 head(d85)
 
 # start with Elbers dissimilarity function
-segregation::dissimilarity(d85, "Gender","OccMinor", weight="value")
+segregation::dissimilarity(d85, "Gender","OccMinor", weight="n")
 #    stat       est
-# 1:    D 0.5121397
+# 1:    D 0.5129446
 
 # then with UM2020 dissimilarity
-ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")
+ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="n")
 #    stat       est
-# 1:    D 0.5121397
+# 1:    D 0.5129446
 
 # do remaining years
-d90  <- as.data.table(occgenall[occgenall$CensusYear == "1990",c("OccMinor","Gender","value")])
-d95  <- as.data.table(occgenall[occgenall$CensusYear == "1995",c("OccMinor","Gender","value")])
-d00  <- as.data.table(occgenall[occgenall$CensusYear == "2000",c("OccMinor","Gender","value")])
-d05  <- as.data.table(occgenall[occgenall$CensusYear == "2005",c("OccMinor","Gender","value")])
+d90  <- as.data.table(occgenall[occgenall$year == "1990",c("OccMinor","Gender","n")])
+d95  <- as.data.table(occgenall[occgenall$year == "1995",c("OccMinor","Gender","n")])
+d00  <- as.data.table(occgenall[occgenall$year == "2000",c("OccMinor","Gender","n")])
+d05  <- as.data.table(occgenall[occgenall$year == "2005",c("OccMinor","Gender","n")])
 
 # put in data table for plotting as in figure 1 of UM2020
-di_um <- data.table( CensusYear = c(1985,1990,1995,2000,2005),
-DI = c(ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")[,"est"],
-ggj.dissimilarity_all(d90, "Gender","OccMinor", weight="value")[,"est"],
-ggj.dissimilarity_all(d95, "Gender","OccMinor", weight="value")[,"est"],
-ggj.dissimilarity_all(d00, "Gender","OccMinor", weight="value")[,"est"],
-ggj.dissimilarity_all(d05, "Gender","OccMinor", weight="value")[,"est"]) )
+di_um <- data.table( year = c(1985,1990,1995,2000,2005),
+DI = c(ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="n")[,"est"],
+ggj.dissimilarity_all(d90, "Gender","OccMinor", weight="n")[,"est"],
+ggj.dissimilarity_all(d95, "Gender","OccMinor", weight="n")[,"est"],
+ggj.dissimilarity_all(d00, "Gender","OccMinor", weight="n")[,"est"],
+ggj.dissimilarity_all(d05, "Gender","OccMinor", weight="n")[,"est"]) )
 
 di_um$Change <- as.numeric(di_um$DI ) / as.numeric(di_um[1,2][[1]])
 
 windows(11,5)
 par(mfrow=c(1,2))
-with(di_um, plot(CensusYear, DI, ylim=c(0,0.60), type="b",
+with(di_um, plot(year, DI, ylim=c(0,0.60), type="b",
   main="Dissimilarity Index", ylab=""))
-with(di_um, text(CensusYear, DI, labels=round(as.numeric(di_um$DI ),4), 
+with(di_um, text(year, DI, labels=round(as.numeric(di_um$DI ),4), 
   pos=3,cex=0.7))
-with(di_um, plot(CensusYear, Change, ylim=c(0.85,1.15), type="b",
+with(di_um, plot(year, Change, ylim=c(0.90,1.05), type="b",
   main="Change versus 1985", ylab=""))
-with(di_um, text(CensusYear, Change, labels=round(as.numeric(di_um$Change ),3), 
-  pos=3,cex=0.7))</code></pre>
+with(di_um, text(year, Change, labels=round(as.numeric(di_um$Change ),3), 
+  pos=3,cex=0.7))
+
+</code></pre>
 </article>
 <article>
   <h4>Decomposition of changes between censuses</h4>
@@ -113,34 +114,34 @@ with(di_um, text(CensusYear, Change, labels=round(as.numeric(di_um$Change ),3),
 <p>The R code for the above figure is below.</p>
 <pre><code class="language-html"># decompose census-to-census changes 
 #' dissimilarity indexes for time points
-d85.du <- ggj.dissimilarity_unit(d85,"Gender","OccMinor", weight="value")
-d90.du <- ggj.dissimilarity_unit(d90,"Gender","OccMinor", weight="value")
-d95.du <- ggj.dissimilarity_unit(d95,"Gender","OccMinor", weight="value")
-d00.du <- ggj.dissimilarity_unit(d00,"Gender","OccMinor", weight="value")
-d05.du <- ggj.dissimilarity_unit(d05,"Gender","OccMinor", weight="value")
+d85.du <- ggj.dissimilarity_unit(d85,"Gender","OccMinor", weight="n")
+d90.du <- ggj.dissimilarity_unit(d90,"Gender","OccMinor", weight="n")
+d95.du <- ggj.dissimilarity_unit(d95,"Gender","OccMinor", weight="n")
+d00.du <- ggj.dissimilarity_unit(d00,"Gender","OccMinor", weight="n")
+d05.du <- ggj.dissimilarity_unit(d05,"Gender","OccMinor", weight="n")
 
 #' prepare tables for decomposition
-d85.dm <- ggj.prepare_data(d85,"Gender","OccMinor", weight="value")
+d85.dm <- ggj.prepare_data(d85,"Gender","OccMinor", weight="n")
 d85.dm[, n_group := sum(freq), by = Gender]
 d85.dm[, n_unit := sum(freq), by = OccMinor]
 d85.dm[, n_all := sum(freq)]
 
-d90.dm <- ggj.prepare_data(d90,"Gender","OccMinor", weight="value")
+d90.dm <- ggj.prepare_data(d90,"Gender","OccMinor", weight="n")
 d90.dm[, n_group := sum(freq), by = Gender]
 d90.dm[, n_unit := sum(freq), by = OccMinor]
 d90.dm[, n_all := sum(freq)]
 
-d95.dm <- ggj.prepare_data(d95,"Gender","OccMinor", weight="value")
+d95.dm <- ggj.prepare_data(d95,"Gender","OccMinor", weight="n")
 d95.dm[, n_group := sum(freq), by = Gender]
 d95.dm[, n_unit := sum(freq), by = OccMinor]
 d95.dm[, n_all := sum(freq)]
 
-d00.dm <- ggj.prepare_data(d00,"Gender","OccMinor", weight="value")
+d00.dm <- ggj.prepare_data(d00,"Gender","OccMinor", weight="n")
 d00.dm[, n_group := sum(freq), by = Gender]
 d00.dm[, n_unit := sum(freq), by = OccMinor]
 d00.dm[, n_all := sum(freq)]
 
-d05.dm <- ggj.prepare_data(d05,"Gender","OccMinor", weight="value")
+d05.dm <- ggj.prepare_data(d05,"Gender","OccMinor", weight="n")
 d05.dm[, n_group := sum(freq), by = Gender]
 d05.dm[, n_unit := sum(freq), by = OccMinor]
 d05.dm[, n_all := sum(freq)]
@@ -162,8 +163,8 @@ d85_90.summary
 
 # sum over units
 d85_90.sum <- with(d85_90.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
-within = sum(within ),marginal = sum(marginal),
-contribution = sum(contribution)))
+  within = sum(within ),marginal = sum(marginal),
+  contribution = sum(contribution)))
 
 
 # decomposition sums 1990-1995
@@ -183,8 +184,8 @@ d90_95.summary
 
 # sum over units
 d90_95.sum <- with(d90_95.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
-within = sum(within ),marginal = sum(marginal),
-contribution = sum(contribution)))
+  within = sum(within ),marginal = sum(marginal),
+  contribution = sum(contribution)))
 d90_95.sum
 
 
@@ -205,8 +206,8 @@ d95_00.summary
 
 # sum over units
 d95_00.sum <- with(d95_00.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
-within = sum(within ),marginal = sum(marginal),
-contribution = sum(contribution)))
+  within = sum(within ),marginal = sum(marginal),
+  contribution = sum(contribution)))
 d95_00.sum
 
 
@@ -227,8 +228,8 @@ d00_05.summary
 
 # sum over units
 d00_05.sum <- with(d00_05.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
-within = sum(within ),marginal = sum(marginal),
-contribution = sum(contribution)))
+  within = sum(within ),marginal = sum(marginal),
+  contribution = sum(contribution)))
 d00_05.sum
 
 # decomposition sums 1985-2005
@@ -248,21 +249,41 @@ d85_05.summary
 
 # sum over units
 d85_05.sum <- with(d85_05.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
-within = sum(within ),marginal = sum(marginal),
-contribution = sum(contribution)))
+  within = sum(within ),marginal = sum(marginal),
+  contribution = sum(contribution)))
 d85_05.sum
 
 # plot it
 res <- cbind(data.table(
-Period = c("1985-1990","1990-1995","1995-2000","2000-2005","1985-2005")),
-rbind(d85_90.sum,d90_95.sum,d95_00.sum,d00_05.sum,d85_05.sum))
+  Period = c("1985-1990","1990-1995","1995-2000","2000-2005","1985-2005")),
+  rbind(d85_90.sum,d90_95.sum,d95_00.sum,d00_05.sum,d85_05.sum))
 colnames(res) <- c("Period","D_1","D_2","Structural","Occupational","Total")
 
 with(res,barplot(cbind(Structural,Occupational,Total) ~ Period, beside=TRUE, ylim=c(-0.04,0.04),
-main="Decomposition of changes in gender-occupation segregation",xlab="",
+main="Decomposition of changes in 
+gender-occupation segregation",xlab="",
 names.arg=c("1985-1990","1990-1995","1995-2000","2000-2005","1985-2005"),
 legend.text = c("Structural","Occupational","Total"), col = gray.colors(3)))
-  </code></pre>
+
+#' scatterplot corresponding to UM2020 Figure 3
+par(mfrow=c(1,1))
+with(d85_05.summary[abs(contribution) > 0.002 & abs(contribution) < 0.5 ,], 
+  plot(marginal,within, xlim=c(-0.008,0.010),ylim=c(-0.015,0.007)
+  ))
+with(d85_05.summary[abs(contribution) > 0.002 & abs(contribution) < 0.5,], text(marginal,within, 
+  labels=as.character(OccMinor ), #xlim=c(-0.010,0.010),ylim=c(-0.005,0.005),
+  pos=1,cex=0.7))
+
+# clean up
+rm(d00,                   
+d00.dm,d00.du,d00_05.decomp,d00_05.diff,d00_05.sum,
+d00_05.summary,d05,d05.dm,d05.du,d85,d85.dm,d85.du,                
+d85_05.decomp,d85_05.diff,d85_05.sum,d85_05.summary,       
+d85_90.decomp,d85_90.diff,d85_90.sum,d85_90.summary,        
+d90,d90.dm,d90.du,d90_95.decomp,d90_95.diff,d90_95.sum,            
+d90_95.summary,d95,d95.dm,d95.du,d95_00.decomp,d95_00.diff,           
+d95_00.sum,d95_00.summary,di_um,ref_di,ref_val,res,tmp )
+</code></pre>
 </article>
 </main>
 <div id="references" class="section level2">
